# Krish_Naik_DS_GenAI

./: README.md  pyproject.toml  requirements.txt  setup.py
Krish_Naik_DS_GenAI.egg-info/: PKG-INFO  SOURCES.txt
myenv/conda-meta/: expat-2.7.1-h6d0c2b6_0.json  history  libffi-3.4.4-hecd8cb5_1.json  ncurses-6.4-hcec6c5f_0.json  openssl-3.0.16-h184c1cd_0.json  python-3.13.5-h81a7116_100_cp313.json  readline-8.2-hca72f7f_0.json  sqlite-3.45.3-h6c40b1e_0.json  tk-8.6.14-h0a12a5f_1.json  wheel-0.45.1-py313hecd8cb5_0.json  xz-5.6.4-h46256e1_1.json  zlib-1.2.13-h4b97444_1.json
myenv/etc/: aau_token
myenv/lib/: libcrypto.3.dylib  libncursesw.6.dylib  libtcl8.6.dylib  libtinfow.6.dylib  tclConfig.sh  tkConfig.sh
myenv/lib/itcl4.2.4/: itclConfig.sh
myenv/lib/pkgconfig/: expat.pc  formw.pc  history.pc  libcrypto.pc  libffi.pc  liblzma.pc  libssl.pc  menuw.pc  ncurses++w.pc  ncursesw.pc  openssl.pc  panelw.pc  python-3.13-embed.pc  python-3.13.pc  readline.pc  sqlite3.pc  tcl.pc  tinfow.pc  tk.pc  zlib.pc
myenv/lib/python3.13/: _sysconfigdata__darwin_darwin.py  _sysconfigdata__darwin_darwin.py.orig  _sysconfigdata_x86_64_apple_darwin13_4_0.py
myenv/lib/python3.13/config-3.13-darwin/: Makefile
myenv/lib/tdbc1.1.7/: tdbcConfig.sh
myenv/share/terminfo/61/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
myenv/share/terminfo/63/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
myenv/share/terminfo/64/: ddr  dec-vt220
myenv/share/terminfo/65/: emu-220
myenv/share/terminfo/67/: go140  go140w  go225
myenv/share/terminfo/68/: hazel  hp2392  (+7 more)
(+122 files in other folders)
